Added aug-cc-pVXZ basis sets for Be using EMSL specs.

--- a/lib/basis/aug-cc-pvdz.kv
+++ b/lib/basis/aug-cc-pvdz.kv
@@ -70,6 +70,52 @@ basis:(
      0.24730000000       1.0000000000    
    })
  ]
+ %
+%
+% BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
+ beryllium: "aug-cc-pVDZ": [
+  (type: [am = s am = s]
+   {exp coef:0 coef:1} = {
+      2940.0000000      0.68000000000E-03 -0.12300000000E-03
+      441.20000000      0.52360000000E-02 -0.96600000000E-03
+      100.50000000      0.26606000000E-01 -0.48310000000E-02
+      28.430000000      0.99993000000E-01 -0.19314000000E-01
+      9.1690000000      0.26970200000     -0.53280000000E-01
+      3.1960000000      0.45146900000     -0.12072300000    
+      1.1590000000      0.29507400000     -0.13343500000    
+     0.18110000000      0.12587000000E-01  0.53076700000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.58900000000E-01   1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.18770000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      3.6190000000      0.29111000000E-01
+     0.71100000000      0.16936500000    
+     0.19510000000      0.51345800000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.60180000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.85000000000E-02   1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.23800000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.07400000000       1.0000000000    
+   })
+ ]
 %
 % BASIS SET: (9s,4p,1d) -> [3s,2p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
