--- a/lib/basis/aug-cc-pvqz.kv
+++ b/lib/basis/aug-cc-pvqz.kv
@@ -144,6 +144,97 @@ basis:(
    })
  ]
 %
+%
+% BASIS SET: (13s,7p,4d,3f,2g) -> [6s,5p,4d,3f,2g]
+ beryllium: "aug-cc-pVQZ": [
+  (type: [am = s am = s]
+   {exp coef:0 coef:1} = {
+      14630.000000      0.92000000000E-04 -0.17000000000E-04
+      2191.0000000      0.71300000000E-03 -0.13000000000E-03
+      498.20000000      0.37350000000E-02 -0.67900000000E-03
+      140.90000000      0.15468000000E-01 -0.28570000000E-02
+      45.860000000      0.52874000000E-01 -0.98130000000E-02
+      16.470000000      0.14569400000     -0.28609000000E-01
+      6.3190000000      0.30268100000     -0.63760000000E-01
+      2.5350000000      0.40493600000     -0.11723100000    
+      1.0350000000      0.22238700000     -0.12120200000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.25280000000       1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.10520000000       1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.42610000000E-01   1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.14390000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      14.030000000      0.40990000000E-02
+      3.1680000000      0.25626000000E-01
+     0.90240000000      0.10376800000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.30360000000       1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.11300000000       1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.42860000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.06500000000E-01   1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+      1.0720000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.44100000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.18110000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.05540000000       1.0000000000    
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.48100000000       1.0000000000    
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.25500000000       1.0000000000    
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.09300000000       1.0000000000    
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+     0.41500000000       1.0000000000    
+   })
+  (type: [(am = g puream = 1)]
+   {exp coef:0} = {
+     0.18340000000       1.0000000000    
+   })
+ ]
+%
 % BASIS SET: (12s,6p,3d,2f,1g) -> [5s,4p,3d,2f,1g]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
  boron: "aug-cc-pVQZ": [
