--- a/lib/basis/aug-cc-pvtz.kv
+++ b/lib/basis/aug-cc-pvtz.kv
@@ -104,6 +104,73 @@ basis:(
    })
  ]
 %
+%
+% BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
+ beryllium: "aug-cc-pVTZ": [
+  (type: [am = s am = s]
+   {exp coef:0 coef:1} = {
+      6863.0000000      0.23600000000E-03 -0.43000000000E-04
+      1030.0000000      0.18260000000E-02 -0.33300000000E-03
+      234.70000000      0.94520000000E-02 -0.17360000000E-02
+      66.560000000      0.37957000000E-01 -0.70120000000E-02
+      21.690000000      0.11996500000     -0.23126000000E-01
+      7.7340000000      0.28216200000     -0.58138000000E-01
+      2.9160000000      0.42740400000     -0.11455600000    
+      1.1300000000      0.26627800000     -0.13590800000    
+     0.11010000000     -0.72750000000E-02  0.57744100000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.25770000000       1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.44090000000E-01   1.0000000000    
+   })
+  (type: [am = s]
+   {exp coef:0} = {
+     0.15030000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+      7.4360000000      0.10736000000E-01
+      1.5770000000      0.62854000000E-01
+     0.43520000000      0.24818000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.14380000000       1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.49940000000E-01   1.0000000000    
+   })
+  (type: [am = p]
+   {exp coef:0} = {
+     0.07060000000E-01   1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.34800000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.18030000000       1.0000000000    
+   })
+  (type: [(am = d puream = 1)]
+   {exp coef:0} = {
+     0.06540000000       1.0000000000    
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.32500000000       1.0000000000    
+   })
+  (type: [(am = f puream = 1)]
+   {exp coef:0} = {
+     0.15330000000       1.0000000000    
+   })
+ ]
+%
 % BASIS SET: (10s,5p,2d,1f) -> [4s,3p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
  boron: "aug-cc-pVTZ": [
