add aug-cc-pVXZ and empty augmentation-cc-pVXZ-RI (X=D,T,Q) basis sets for Li, Na, and Mg

--- a/lib/basis/aug-cc-pvdz.kv
+++ b/lib/basis/aug-cc-pvdz.kv
@@ -70,7 +70,55 @@ basis:(
      0.24730000000       1.0000000000    
    })
  ]
- %
+%
+% BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
+ lithium:"aug-cc-pVDZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.469000000000e+03               7.660000000000e-04
+                  2.205000000000e+02               5.892000000000e-03
+                  5.026000000000e+01               2.967100000000e-02
+                  1.424000000000e+01               1.091800000000e-01
+                  4.581000000000e+00               2.827890000000e-01
+                  1.580000000000e+00               4.531230000000e-01
+                  5.640000000000e-01               2.747740000000e-01
+                  7.345000000000e-02               9.751000000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.469000000000e+03              -1.200000000000e-04
+                  2.205000000000e+02              -9.230000000000e-04
+                  5.026000000000e+01              -4.689000000000e-03
+                  1.424000000000e+01              -1.768200000000e-02
+                  4.581000000000e+00              -4.890200000000e-02
+                  1.580000000000e+00              -9.600900000000e-02
+                  5.640000000000e-01              -1.363800000000e-01
+                  7.345000000000e-02               5.751020000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.805000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  8.640000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.534000000000e+00               2.278400000000e-02
+                  2.749000000000e-01               1.391070000000e-01
+                  7.362000000000e-02               5.003750000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.403000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.790000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.239000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  7.250000000000e-02               1.000000000000e+00})
+ ]
+%
 %
 % BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
  beryllium: "aug-cc-pVDZ": [
@@ -391,6 +439,166 @@ basis:(
    {exp coef:0} = {
      0.63100000000       1.0000000000    
    })
+ ]
+%
+% BASIS SET: (13s,9p,2d) -> [5s,4p,2d]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
+ sodium:"aug-cc-pVDZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.170000000000e+04               4.588780000000e-04
+                  4.755000000000e+03               3.550700000000e-03
+                  1.082000000000e+03               1.826180000000e-02
+                  3.064000000000e+02               7.166500000000e-02
+                  9.953000000000e+01               2.123460000000e-01
+                  3.542000000000e+01               4.162030000000e-01
+                  1.330000000000e+01               3.730200000000e-01
+                  4.392000000000e+00               6.250540000000e-02
+                  1.676000000000e+00              -6.245320000000e-03
+                  5.889000000000e-01               2.433740000000e-03
+                  5.640000000000e-02              -4.423810000000e-04})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.170000000000e+04              -1.121620000000e-04
+                  4.755000000000e+03              -8.685120000000e-04
+                  1.082000000000e+03              -4.513300000000e-03
+                  3.064000000000e+02              -1.814360000000e-02
+                  9.953000000000e+01              -5.807990000000e-02
+                  3.542000000000e+01              -1.376530000000e-01
+                  1.330000000000e+01              -1.939080000000e-01
+                  4.392000000000e+00               8.580090000000e-02
+                  1.676000000000e+00               6.044190000000e-01
+                  5.889000000000e-01               4.417190000000e-01
+                  5.640000000000e-02               1.305470000000e-02})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.170000000000e+04               1.701600000000e-05
+                  4.755000000000e+03               1.306930000000e-04
+                  1.082000000000e+03               6.877840000000e-04
+                  3.064000000000e+02               2.723590000000e-03
+                  9.953000000000e+01               8.955290000000e-03
+                  3.542000000000e+01               2.078320000000e-02
+                  1.330000000000e+01               3.193800000000e-02
+                  4.392000000000e+00              -1.913680000000e-02
+                  1.676000000000e+00              -1.025950000000e-01
+                  5.889000000000e-01              -1.989450000000e-01
+                  5.640000000000e-02               6.559520000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.307000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.250000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.381000000000e+02               5.796410000000e-03
+                  3.224000000000e+01               4.157560000000e-02
+                  9.985000000000e+00               1.628730000000e-01
+                  3.484000000000e+00               3.594010000000e-01
+                  1.231000000000e+00               4.499880000000e-01
+                  4.177000000000e-01               2.275070000000e-01
+                  6.513000000000e-02               8.082470000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.381000000000e+02              -5.815310000000e-04
+                  3.224000000000e+01              -4.073060000000e-03
+                  9.985000000000e+00              -1.679370000000e-02
+                  3.484000000000e+00              -3.532680000000e-02
+                  1.231000000000e+00              -5.219710000000e-02
+                  4.177000000000e-01              -1.683590000000e-02
+                  6.513000000000e-02               4.346130000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.053000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.330000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  9.730000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  4.680000000000e-02               1.000000000000e+00})
+]
+%
+% BASIS SET: (13s,9p,2d) -> [5s,4p,2d]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
+ magnesium:"aug-cc-pVDZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.739000000000e+04               3.460230000000e-04
+                  7.108000000000e+03               2.680770000000e-03
+                  1.618000000000e+03               1.383670000000e-02
+                  4.584000000000e+02               5.517670000000e-02
+                  1.493000000000e+02               1.696600000000e-01
+                  5.359000000000e+01               3.647030000000e-01
+                  2.070000000000e+01               4.068560000000e-01
+                  8.384000000000e+00               1.350890000000e-01
+                  2.542000000000e+00               4.908840000000e-03
+                  8.787000000000e-01               2.864600000000e-04
+                  1.077000000000e-01               2.645900000000e-05})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.739000000000e+04              -8.778390000000e-05
+                  7.108000000000e+03              -6.747250000000e-04
+                  1.618000000000e+03              -3.556030000000e-03
+                  4.584000000000e+02              -1.421540000000e-02
+                  1.493000000000e+02              -4.767480000000e-02
+                  5.359000000000e+01              -1.148920000000e-01
+                  2.070000000000e+01              -2.006760000000e-01
+                  8.384000000000e+00              -3.412240000000e-02
+                  2.542000000000e+00               5.704540000000e-01
+                  8.787000000000e-01               5.423090000000e-01
+                  1.077000000000e-01               2.181280000000e-02})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.739000000000e+04               1.696280000000e-05
+                  7.108000000000e+03               1.298650000000e-04
+                  1.618000000000e+03               6.888310000000e-04
+                  4.584000000000e+02               2.735330000000e-03
+                  1.493000000000e+02               9.312240000000e-03
+                  5.359000000000e+01               2.232650000000e-02
+                  2.070000000000e+01               4.111950000000e-02
+                  8.384000000000e+00               5.456420000000e-03
+                  2.542000000000e+00              -1.340120000000e-01
+                  8.787000000000e-01              -2.561760000000e-01
+                  1.077000000000e-01               6.058560000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.999000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.488000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.799000000000e+02               5.381610000000e-03
+                  4.214000000000e+01               3.924180000000e-02
+                  1.313000000000e+01               1.574450000000e-01
+                  4.628000000000e+00               3.585350000000e-01
+                  1.670000000000e+00               4.572260000000e-01
+                  5.857000000000e-01               2.159180000000e-01
+                  1.311000000000e-01               6.649480000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.799000000000e+02              -8.659480000000e-04
+                  4.214000000000e+01              -6.159780000000e-03
+                  1.313000000000e+01              -2.615190000000e-02
+                  4.628000000000e+00              -5.706470000000e-02
+                  1.670000000000e+00              -8.739060000000e-02
+                  5.857000000000e-01              -1.229900000000e-02
+                  1.311000000000e-01               5.020850000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.112000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.350000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.870000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  5.950000000000e-02               1.000000000000e+00})
  ]
 %
 % BASIS SET: (12s,8p,1d) -> [4s,3p,1d]
