--- a/lib/basis/aug-cc-pvqz.kv
+++ b/lib/basis/aug-cc-pvqz.kv
@@ -144,6 +144,89 @@ basis:(
    })
  ]
 %
+% BASIS SET: (13s,7p,4d,3f,2g) -> [6s,5p,4d,3f,2g]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
+lithium:"aug-cc-pVQZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.601000000000e+03               1.170000000000e-04
+                  9.897000000000e+02               9.110000000000e-04
+                  2.257000000000e+02               4.728000000000e-03
+                  6.429000000000e+01               1.919700000000e-02
+                  2.118000000000e+01               6.304700000000e-02
+                  7.724000000000e+00               1.632080000000e-01
+                  3.003000000000e+00               3.148270000000e-01
+                  1.212000000000e+00               3.939360000000e-01
+                  4.930000000000e-01               1.969180000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.601000000000e+03              -1.800000000000e-05
+                  9.897000000000e+02              -1.420000000000e-04
+                  2.257000000000e+02              -7.410000000000e-04
+                  6.429000000000e+01              -3.020000000000e-03
+                  2.118000000000e+01              -1.012300000000e-02
+                  7.724000000000e+00              -2.709400000000e-02
+                  3.003000000000e+00              -5.735900000000e-02
+                  1.212000000000e+00              -9.389500000000e-02
+                  4.930000000000e-01              -1.210910000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  9.515000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.791000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.220000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.360000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  6.250000000000e+00               3.388000000000e-03
+                  1.370000000000e+00               1.931600000000e-02
+                  3.672000000000e-01               7.910400000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.192000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.474000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.795000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.560000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.440000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.530000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.800000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.660000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.460000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.292000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  5.520000000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  2.380000000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  1.050000000000e-01               1.000000000000e+00})
+ ]
+%
 %
 % BASIS SET: (13s,7p,4d,3f,2g) -> [6s,5p,4d,3f,2g]
  beryllium: "aug-cc-pVQZ": [
@@ -779,6 +862,261 @@ basis:(
    {exp coef:0} = {
       1.2240000000       1.0000000000    
    })
+ ]
+%
+% BASIS SET: (20s,13p,4d,3f,2g) -> [7s,6p,4d,3f,2g]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
+ sodium:"aug-cc-pVQZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.224000000000e+06               4.788940000000e-06
+                  1.832000000000e+05               3.723950000000e-05
+                  4.170000000000e+04               1.958310000000e-04
+                  1.181000000000e+04               8.266980000000e-04
+                  3.853000000000e+03               3.002510000000e-03
+                  1.391000000000e+03               9.703100000000e-03
+                  5.425000000000e+02               2.823370000000e-02
+                  2.249000000000e+02               7.320580000000e-02
+                  9.793000000000e+01               1.628970000000e-01
+                  4.431000000000e+01               2.887080000000e-01
+                  2.065000000000e+01               3.468290000000e-01
+                  9.729000000000e+00               2.068650000000e-01
+                  4.228000000000e+00               3.280090000000e-02
+                  1.969000000000e+00              -6.477360000000e-04
+                  8.890000000000e-01               1.458780000000e-03
+                  3.964000000000e-01              -1.783460000000e-04})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.224000000000e+06              -1.169580000000e-06
+                  1.832000000000e+05              -9.091100000000e-06
+                  4.170000000000e+04              -4.784990000000e-05
+                  1.181000000000e+04              -2.019620000000e-04
+                  3.853000000000e+03              -7.358370000000e-04
+                  1.391000000000e+03              -2.387460000000e-03
+                  5.425000000000e+02              -7.049690000000e-03
+                  2.249000000000e+02              -1.878560000000e-02
+                  9.793000000000e+01              -4.461530000000e-02
+                  4.431000000000e+01              -8.977410000000e-02
+                  2.065000000000e+01              -1.429400000000e-01
+                  9.729000000000e+00              -1.243150000000e-01
+                  4.228000000000e+00               9.996480000000e-02
+                  1.969000000000e+00               4.170800000000e-01
+                  8.890000000000e-01               4.751230000000e-01
+                  3.964000000000e-01               1.632680000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.224000000000e+06               1.758710000000e-07
+                  1.832000000000e+05               1.365940000000e-06
+                  4.170000000000e+04               7.197950000000e-06
+                  1.181000000000e+04               3.033490000000e-05
+                  3.853000000000e+03               1.107520000000e-04
+                  1.391000000000e+03               3.585960000000e-04
+                  5.425000000000e+02               1.062720000000e-03
+                  2.249000000000e+02               2.826870000000e-03
+                  9.793000000000e+01               6.767420000000e-03
+                  4.431000000000e+01               1.364800000000e-02
+                  2.065000000000e+01               2.228140000000e-02
+                  9.729000000000e+00               1.960110000000e-02
+                  4.228000000000e+00              -1.677080000000e-02
+                  1.969000000000e+00              -7.737340000000e-02
+                  8.890000000000e-01              -1.135010000000e-01
+                  3.964000000000e-01              -1.391300000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.993000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.289000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.612000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.030000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.134000000000e+02               9.081960000000e-04
+                  9.798000000000e+01               7.417730000000e-03
+                  3.137000000000e+01               3.574640000000e-02
+                  1.162000000000e+01               1.185200000000e-01
+                  4.671000000000e+00               2.614030000000e-01
+                  1.918000000000e+00               3.783950000000e-01
+                  7.775000000000e-01               3.346320000000e-01
+                  3.013000000000e-01               1.268440000000e-01
+                  2.275000000000e-01              -1.471170000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  4.134000000000e+02              -9.017410000000e-05
+                  9.798000000000e+01              -7.393420000000e-04
+                  3.137000000000e+01              -3.573090000000e-03
+                  1.162000000000e+01              -1.201420000000e-02
+                  4.671000000000e+00              -2.671780000000e-02
+                  1.918000000000e+00              -3.927530000000e-02
+                  7.775000000000e-01              -3.760830000000e-02
+                  3.013000000000e-01              -4.332280000000e-02
+                  2.275000000000e-01               5.180030000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.527000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.126000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.342000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.720000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.538000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.650000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  4.870000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.100000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.912000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.036000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  4.530000000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  1.722000000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  8.660000000000e-02               1.000000000000e+00})
+ ]
+%
+% BASIS SET: (17s,13p,4d,3f,2g) -> [7s,6p,4d,3f,2g]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
+ magnesium:"aug-cc-pVQZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.276000000000e+05               3.096080000000e-05
+                  4.905000000000e+04               2.409540000000e-04
+                  1.115000000000e+04               1.266600000000e-03
+                  3.152000000000e+03               5.333590000000e-03
+                  1.025000000000e+03               1.907700000000e-02
+                  3.688000000000e+02               5.880580000000e-02
+                  1.432000000000e+02               1.514540000000e-01
+                  5.896000000000e+01               3.007160000000e-01
+                  2.540000000000e+01               3.811490000000e-01
+                  1.115000000000e+01               2.135840000000e-01
+                  4.004000000000e+00               2.312100000000e-02
+                  1.701000000000e+00              -2.307570000000e-03
+                  7.060000000000e-01               1.289000000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.276000000000e+05              -7.831730000000e-06
+                  4.905000000000e+04              -6.079350000000e-05
+                  1.115000000000e+04              -3.211970000000e-04
+                  3.152000000000e+03              -1.349550000000e-03
+                  1.025000000000e+03              -4.905700000000e-03
+                  3.688000000000e+02              -1.535610000000e-02
+                  1.432000000000e+02              -4.234090000000e-02
+                  5.896000000000e+01              -9.406030000000e-02
+                  2.540000000000e+01              -1.634250000000e-01
+                  1.115000000000e+01              -1.247540000000e-01
+                  4.004000000000e+00               2.356230000000e-01
+                  1.701000000000e+00               5.775630000000e-01
+                  7.060000000000e-01               3.352320000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.276000000000e+05               1.509080000000e-06
+                  4.905000000000e+04               1.171340000000e-05
+                  1.115000000000e+04               6.189800000000e-05
+                  3.152000000000e+03               2.600880000000e-04
+                  1.025000000000e+03               9.462180000000e-04
+                  3.688000000000e+02               2.965950000000e-03
+                  1.432000000000e+02               8.212450000000e-03
+                  5.896000000000e+01               1.839770000000e-02
+                  2.540000000000e+01               3.266570000000e-02
+                  1.115000000000e+01               2.573150000000e-02
+                  4.004000000000e+00              -5.353510000000e-02
+                  1.701000000000e+00              -1.568950000000e-01
+                  7.060000000000e-01              -2.066590000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.410000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.808000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.063000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.239000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.396000000000e+02               8.339690000000e-04
+                  1.279000000000e+02               6.892150000000e-03
+                  4.102000000000e+01               3.378740000000e-02
+                  1.525000000000e+01               1.144010000000e-01
+                  6.166000000000e+00               2.595140000000e-01
+                  2.561000000000e+00               3.850950000000e-01
+                  1.060000000000e+00               3.353730000000e-01
+                  4.176000000000e-01               1.106410000000e-01
+                  2.690000000000e-01              -1.213150000000e-02})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.396000000000e+02              -1.320760000000e-04
+                  1.279000000000e+02              -1.095380000000e-03
+                  4.102000000000e+01              -5.394950000000e-03
+                  1.525000000000e+01              -1.855720000000e-02
+                  6.166000000000e+00              -4.273750000000e-02
+                  2.561000000000e+00              -6.476840000000e-02
+                  1.060000000000e+00              -6.278180000000e-02
+                  4.176000000000e-01              -2.449120000000e-02
+                  2.690000000000e-01               1.047610000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.223000000000e-01               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.476000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.388000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.060000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.060000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.944000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.570000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.820000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.810000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  3.590000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  7.000000000000e-02               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  3.070000000000e-01               1.000000000000e+00})
+  (type: [(am = G puream = 1)]
+    {exp coef:0} = {
+                  1.480000000000e-01               1.000000000000e+00})
  ]
 %
 % BASIS SET: (16s,11p,3d,2f,1g) -> [6s,5p,3d,2f,1g]
