--- a/lib/basis/aug-cc-pvtz.kv
+++ b/lib/basis/aug-cc-pvtz.kv
@@ -104,6 +104,71 @@ basis:(
    })
  ]
 %
+% BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
+lithium:"aug-cc-pVTZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.988000000000e+03               1.330000000000e-04
+                  8.989000000000e+02               1.025000000000e-03
+                  2.059000000000e+02               5.272000000000e-03
+                  5.924000000000e+01               2.092900000000e-02
+                  1.987000000000e+01               6.634000000000e-02
+                  7.406000000000e+00               1.657750000000e-01
+                  2.930000000000e+00               3.150380000000e-01
+                  1.189000000000e+00               3.935230000000e-01
+                  4.798000000000e-01               1.908700000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.988000000000e+03              -2.100000000000e-05
+                  8.989000000000e+02              -1.610000000000e-04
+                  2.059000000000e+02              -8.200000000000e-04
+                  5.924000000000e+01              -3.326000000000e-03
+                  1.987000000000e+01              -1.051900000000e-02
+                  7.406000000000e+00              -2.809700000000e-02
+                  2.930000000000e+00              -5.593600000000e-02
+                  1.189000000000e+00              -9.923700000000e-02
+                  4.798000000000e-01              -1.121890000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.509000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.832000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  7.600000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.266000000000e+00               8.630000000000e-03
+                  6.511000000000e-01               4.753800000000e-02
+                  1.696000000000e-01               2.097720000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  5.578000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.050000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  9.100000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.874000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  8.010000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.710000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.829000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  8.160000000000e-02               1.000000000000e+00})
+ ]
+%
 %
 % BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
  beryllium: "aug-cc-pVTZ": [
@@ -565,6 +630,215 @@ basis:(
    {exp coef:0} = {
       1.0840000000       1.0000000000    
    })
+ ]
+%
+% BASIS SET: (17s,11p,3d,2f) -> [6s,5p,3d,2f]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
+sodium:"aug-cc-pVTZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05               1.806180000000e-05
+                  6.334000000000e+04               1.404300000000e-04
+                  1.441000000000e+04               7.384380000000e-04
+                  4.077000000000e+03               3.111820000000e-03
+                  1.328000000000e+03               1.120810000000e-02
+                  4.786000000000e+02               3.528280000000e-02
+                  1.862000000000e+02               9.598970000000e-02
+                  7.692000000000e+01               2.137350000000e-01
+                  3.332000000000e+01               3.486880000000e-01
+                  1.500000000000e+01               3.245660000000e-01
+                  6.869000000000e+00               1.126330000000e-01
+                  2.683000000000e+00               7.067970000000e-03
+                  1.109000000000e+00               5.980100000000e-04
+                  6.015000000000e-02              -5.308700000000e-06})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05              -4.406530000000e-06
+                  6.334000000000e+04              -3.434430000000e-05
+                  1.441000000000e+04              -1.801140000000e-04
+                  4.077000000000e+03              -7.639000000000e-04
+                  1.328000000000e+03              -2.752480000000e-03
+                  4.786000000000e+02              -8.860160000000e-03
+                  1.862000000000e+02              -2.479390000000e-02
+                  7.692000000000e+01              -6.059950000000e-02
+                  3.332000000000e+01              -1.164460000000e-01
+                  1.500000000000e+01              -1.624370000000e-01
+                  6.869000000000e+00              -4.388910000000e-02
+                  2.683000000000e+00               3.379170000000e-01
+                  1.109000000000e+00               5.613470000000e-01
+                  6.015000000000e-02               4.067540000000e-03})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.230000000000e+05               6.630190000000e-07
+                  6.334000000000e+04               5.157690000000e-06
+                  1.441000000000e+04               2.712500000000e-05
+                  4.077000000000e+03               1.146350000000e-04
+                  1.328000000000e+03               4.151180000000e-04
+                  4.786000000000e+02               1.329780000000e-03
+                  1.862000000000e+02               3.755950000000e-03
+                  7.692000000000e+01               9.140250000000e-03
+                  3.332000000000e+01               1.798590000000e-02
+                  1.500000000000e+01               2.514770000000e-02
+                  6.869000000000e+00               7.635220000000e-03
+                  2.683000000000e+00              -6.145890000000e-02
+                  1.109000000000e+00              -1.157210000000e-01
+                  6.015000000000e-02               6.264060000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.540000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.382000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.650000000000e-03               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.433000000000e+02               2.243920000000e-03
+                  5.739000000000e+01               1.739970000000e-02
+                  1.810000000000e+01               7.741250000000e-02
+                  6.575000000000e+00               2.191020000000e-01
+                  2.521000000000e+00               3.785220000000e-01
+                  9.607000000000e-01               3.949020000000e-01
+                  3.512000000000e-01               1.604240000000e-01
+                  9.827000000000e-02               2.333110000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  2.433000000000e+02              -2.224010000000e-04
+                  5.739000000000e+01              -1.742770000000e-03
+                  1.810000000000e+01              -7.754560000000e-03
+                  6.575000000000e+00              -2.251870000000e-02
+                  2.521000000000e+00              -3.843300000000e-02
+                  9.607000000000e-01              -4.501770000000e-02
+                  3.512000000000e-01              -1.921320000000e-02
+                  9.827000000000e-02               1.826970000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.734000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  1.500000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.000000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.367000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  6.360000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.230000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  1.397000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  7.140000000000e-02               1.000000000000e+00})
+ ]
+%
+% BASIS SET: (16s,11p,3d,2f) -> [6s,5p,3d,2f]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
+ magnesium:"aug-cc-pVTZ": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05               7.299290000000e-05
+                  2.471000000000e+04               5.666520000000e-04
+                  5.628000000000e+03               2.962690000000e-03
+                  1.596000000000e+03               1.229620000000e-02
+                  5.210000000000e+02               4.273240000000e-02
+                  1.880000000000e+02               1.230130000000e-01
+                  7.301000000000e+01               2.748320000000e-01
+                  2.990000000000e+01               4.018180000000e-01
+                  1.254000000000e+01               2.646970000000e-01
+                  4.306000000000e+00               3.326120000000e-02
+                  1.826000000000e+00              -4.413350000000e-03
+                  7.417000000000e-01               2.060240000000e-03
+                  7.612000000000e-02               7.081950000000e-04})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05              -1.842480000000e-05
+                  2.471000000000e+04              -1.435000000000e-04
+                  5.628000000000e+03              -7.487100000000e-04
+                  1.596000000000e+03              -3.144070000000e-03
+                  5.210000000000e+02              -1.104810000000e-02
+                  1.880000000000e+02              -3.360580000000e-02
+                  7.301000000000e+01              -8.259460000000e-02
+                  2.990000000000e+01              -1.593140000000e-01
+                  1.254000000000e+01              -1.528880000000e-01
+                  4.306000000000e+00               1.908490000000e-01
+                  1.826000000000e+00               5.799640000000e-01
+                  7.417000000000e-01               3.720290000000e-01
+                  7.612000000000e-02              -1.193440000000e-02})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.649000000000e+05               3.551760000000e-06
+                  2.471000000000e+04               2.764200000000e-05
+                  5.628000000000e+03               1.444040000000e-04
+                  1.596000000000e+03               6.057440000000e-04
+                  5.210000000000e+02               2.135270000000e-03
+                  1.880000000000e+02               6.499340000000e-03
+                  7.301000000000e+01               1.614460000000e-02
+                  2.990000000000e+01               3.157660000000e-02
+                  1.254000000000e+01               3.163740000000e-02
+                  4.306000000000e+00              -4.391400000000e-02
+                  1.826000000000e+00              -1.510930000000e-01
+                  7.417000000000e-01              -2.176680000000e-01
+                  7.612000000000e-02               5.472450000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.457000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.310000000000e-02               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.290000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.169000000000e+02               2.075320000000e-03
+                  7.486000000000e+01               1.628690000000e-02
+                  2.372000000000e+01               7.386970000000e-02
+                  8.669000000000e+00               2.142970000000e-01
+                  3.363000000000e+00               3.821540000000e-01
+                  1.310000000000e+00               3.981780000000e-01
+                  4.911000000000e-01               1.528780000000e-01
+                  2.364000000000e-01              -4.375400000000e-03})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.169000000000e+02              -3.297270000000e-04
+                  7.486000000000e+01              -2.587540000000e-03
+                  2.372000000000e+01              -1.191200000000e-02
+                  8.669000000000e+00              -3.502270000000e-02
+                  3.363000000000e+00              -6.399680000000e-02
+                  1.310000000000e+00              -7.044360000000e-02
+                  4.911000000000e-01              -3.758360000000e-02
+                  2.364000000000e-01               1.770430000000e-01})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  8.733000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  3.237000000000e-02               1.000000000000e+00})
+  (type: [(am = P puream = 1)]
+    {exp coef:0} = {
+                  7.450000000000e-03               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.260000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.940000000000e-01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  4.680000000000e-02               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  2.520000000000e-01               1.000000000000e+00})
+  (type: [(am = F puream = 1)]
+    {exp coef:0} = {
+                  9.400000000000e-02               1.000000000000e+00})
  ]
 %
 % BASIS SET: (15s,9p,2d,1f) -> [5s,4p,2d,1f]
