--- a/lib/basis/augmentation-cc-pvtz-ri.kv
+++ b/lib/basis/augmentation-cc-pvtz-ri.kv
@@ -31,6 +31,12 @@ basis: (
    0.80340665713 1.0000000
   })
  ]
+ lithium: "augmentation-cc-pVTZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
+ ]
  boron: "augmentation-cc-pVTZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
@@ -162,6 +168,18 @@ basis: (
    {exp coef:0} = {
    1.5785006538 1.0000000
   })
+ ]
+ sodium: "augmentation-cc-pVTZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
+ ]
+ magnesium: "augmentation-cc-pVTZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
  ]
  aluminum: "augmentation-cc-pVTZ-RI": [
   (type: [am=s]
