add empty entries in the aug-cc-pVXZ-RI (X=D,T,Q) basis sets for Be

--- a/lib/basis/augmentation-cc-pvqz-ri.kv
+++ b/lib/basis/augmentation-cc-pvqz-ri.kv
@@ -45,6 +45,12 @@ basis: (
     0.0000000000 0.0000000
    })
  ]
+ beryllium: "augmentation-cc-pVQZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
+ ]
  boron: "augmentation-cc-pVQZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
