--- a/lib/basis/augmentation-cc-pvdz-ri.kv
+++ b/lib/basis/augmentation-cc-pvdz-ri.kv
@@ -29,6 +29,12 @@ basis: (
     0.0000000000 0.0000000
    })
  ]
+ beryllium: "augmentation-cc-pVDZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
+ ]
  boron: "augmentation-cc-pVDZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
