--- a/lib/basis/augmentation-cc-pvtz-ri.kv
+++ b/lib/basis/augmentation-cc-pvtz-ri.kv
@@ -37,6 +37,12 @@ basis: (
     0.0000000000 0.0000000
    })
  ]
+ beryllium: "augmentation-cc-pVTZ-RI": [
+   (type: [am=s]
+    {exp coef:0} = {
+    0.0000000000 0.0000000
+   })
+ ]
  boron: "augmentation-cc-pVTZ-RI": [
   (type: [am=s]
    {exp coef:0} = {
